[F] Fix inconsistent text-header spacing
BUGFIX #134387775

--- a/client/src/theme/Components/browse/project-detail/_events.scss
+++ b/client/src/theme/Components/browse/project-detail/_events.scss
@@ -29,12 +29,7 @@
   @include listUnstyled();
   display: flex;
   flex-wrap: wrap;
-  padding-top: 20px;
   margin-bottom: -28px;
-
-  @include respond($break60) {
-    padding-top: 39px;
-  }
 
   @include respond($break60) {
     margin-left: -40px;
