--- a/client/src/theme/Components/shared/_key-value-list.scss
+++ b/client/src/theme/Components/shared/_key-value-list.scss
@@ -26,7 +26,6 @@
   @include listHorizontal;
 
   @include respond($break40) {
-    padding-top: 14px;
     margin-left: -10.2vw;
   }
 
