--- a/client/src/theme/STACSS/_structure.scss
+++ b/client/src/theme/STACSS/_structure.scss
@@ -107,7 +107,7 @@
   &:not(.flush) {
     section > & {
       padding-top: 45px;
-      padding-bottom: 40px;
+      padding-bottom: 45px;
 
       @include respond($break75) {
         padding-top: 74px;
@@ -119,7 +119,7 @@
   &.flush-top {
     section > & {
       padding-top: 0;
-      padding-bottom: 40px;
+      padding-bottom: 45px;
 
       @include respond($break75) {
         padding-top: 0;
